fix scroll on mobiles

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
 
 body {
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow:hidden;
+  overflow-y:hidden;
+  overflow-x:hidden;
 }
 
 html {
@@ -67,7 +69,7 @@ main {
 /* Hero Section */
 .hero {
   width: 100%;
-  background-image: url('./assets/images/HeroSection.png');
+  background-image: url('../assets/images/HeroSection.png');
   background-position: center;
   background-repeat: no-repeat;
   min-height: 700px;
@@ -178,7 +180,7 @@ main {
 }
 
 /* Adaptive for mobiles */
-@media (min-width: 375px) and (max-width: 1335px) {
+@media (width >= 375px) and (width <= 1335px) {
   /* Header */
   .logo__image {
     height: 32px;
